CRUD-API/db-deployment.yaml

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: mongo
#   namespace: db
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: mongo
#   template:
#     metadata:
#       labels:
#         app: mongo
#     spec:
#       containers:
#       - name: mongo-container
#         image: mongo:latest
#         env:
#         - name: MONGO_INITDB_DATABASE
#           valueFrom:
#             configMapKeyRef:
#               name: mongo-config
#               key: database
#         - name: MONGO_INITDB_ROOT_USERNAME
#           valueFrom:
#             secretKeyRef:
#               name: mongo-secret
#               key: username
#         - name: MONGO_INITDB_ROOT_PASSWORD
#           valueFrom:
#             secretKeyRef:
#               name: mongo-secret
#               key: password
#         ports:
#         - containerPort: 27017



apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo-container
        image: mongo:latest
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db
      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongo-pvc
