CRUD-API/api-ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: api-ingress
#   namespace: api
# spec:
#   rules:
#   - host: 192.168.49.2
#     http:
#       paths:
#       - path: /users
#         pathType: Prefix
#         backend:
#           service:
#             name: api-service
#             port:
#               number: 8000




apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: api
spec:
  rules:
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 8000
